@@ -86,6 +86,30 @@ namespace Mono.Debugging.Soft
 		
 		public Value RuntimeInvoke (MethodMirror method, object target, Value[] values)
 		{
+			if (values != null) {
+				// Some arguments may need to be boxed
+				ParameterInfoMirror[] mparams = method.GetParameters ();
+				if (mparams.Length != values.Length)
+					throw new EvaluatorException ("Invalid number of arguments when calling: " + method.Name);
+				
+				for (int n=0; n<mparams.Length; n++) {
+					TypeMirror tm = mparams [n].ParameterType;
+					if (tm.IsValueType || tm.IsPrimitive)
+						continue;
+					object type = Adapter.GetValueType (this, values [n]);
+					TypeMirror argTypeMirror = type as TypeMirror;
+					Type argType = type as Type;
+					if ((argTypeMirror != null && (argTypeMirror.IsValueType || argTypeMirror.IsPrimitive)) || (argType != null && (argType.IsValueType || argType.IsPrimitive))) {
+						// A value type being assigned to a parameter which is not a value type. The value has to be boxed.
+						try {
+							values [n] = Thread.Domain.CreateBoxedValue (values [n]);
+						} catch (NotSupportedException) {
+							// This runtime doesn't support creating boxed values
+							break;
+						}
+					}
+				}
+			}			
 			MethodCall mc = new MethodCall (this, method, target, values);
 			Adapter.AsyncExecute (mc, Options.EvaluationTimeout);
 			return mc.ReturnValue;
